[workspace]
members = ["packages/swc-plugins/*"]

resolver = "2"

[workspace.package]
authors      = ["zhuguibiao <zhuguibiao1994@gmail.com>"]
edition      = "2021"
homepage     = "https://github.com/zhuguibiao/zgb-build-tools"
repository   = "https://github.com/zhuguibiao/zgb-build-tools.git"
rust-version = "1.70"

[workspace.dependencies]
cargo_metadata              = "0.18.1"
regex                       = { version = "1.10.4", default-features = false }
serde                       = "1.0.203"
serde_json                  = "1.0.117"
swc_atoms                   = "5.0.0"
swc_common                  = "8.0.0"
swc_core                    = "16.0.0"
testing                     = "8.0.0"
tracing                     = "0.1.40"


[profile.release]
codegen-units = 1
# debug = true
lto = true

# Optimize for size
opt-level = "s"

# Strip debug symbols
strip = "symbols"
